--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AI Company",
-  "name": "AI Company",
+  "short_name": "WaveGenX AI",
+  "name": "WaveGenX AI",
   "icons": [
     {
       "src": "logo.png",
